Sun Dec 20 11:43:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): allow here documents in labeled
	  argument.  [ruby-core:72396] [Bug #11849]

Sun Dec 20 11:14:11 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_mod_define_method): should check Symbol or not.
	  [Bug #11850]

	* test/ruby/test_method.rb: add a test.

Sun Dec 20 11:01:57 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_mod_define_method): fix notation.

Sun Dec 20 10:54:15 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (proc_new): fix notation.

Sun Dec 20 00:29:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_proc_get_iseq): proc made from symbol does not have
	  iseq.  fix infinite loop.  [ruby-core:72381] [Bug #11845]

Sat Dec 19 20:06:10 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* enc/windows_1250.c: Should not use C++ style comments (C99 feature).
	  [Bug #11843]

Sat Dec 19 17:17:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler#initialize):
	  use WEBrick::Utils::TimeoutHandler::Thread, which is ignored by
	  LeakChecker#find_threads, instead of ::Thread to get rid of
	  thread leak checker.  since this TimeoutHandler is resident
	  during tests because of Singleton, it waits for the next timeout
	  if it has any schedules.  in the case of nested timeouts, inner
	  timeout does not cancel outer timeouts and then those schedules
	  still remain.

Sat Dec 19 14:28:01 2015  Jake Worth  <jakeworth82@gmail.com>

	* ext/zlib/zlib.c (Init_zlib): [DOC] Fix double-word typo and
	  grammatical error.  [Fix GH-1162]

Sat Dec 19 14:23:59 2015  Jake Worth  <jakeworth82@gmail.com>

	* lib/csv.rb (CSV#initialize): [DOC] Fix double-word typo.
	  [Fix GH-1161]

Sat Dec 19 10:33:33 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_2.c, enc/windows_1250.c: separate Windows-1250
	  from ISO-8859-2 to fix 0x80..0x9e range (from Kimihito Matsui)
